4.0.3
  2014-01-14
  Feature
  * #i0009: List view: thumbnail links to single view (former: image popup)
  * #54992: Replace marker
            Effected files:
            * static
              * setup.txt

4.0.2
  2014-01-09
  Features
  * #54872: SEO: move support from Browser - TYPO3 without PHP - to SEO Dynamic 2
            Effected files:
            * static
              * constants.txt
              * setup.txt
  * #54793: RealURL: Template
            Effected files:
            * res/realurl/realurl_conf.php

4.0.1
  2013-12-28
  Feature
  * #i0008: TCA search fields

4.0.0
  2013-12-10
  Features
  * #53422: In stock amount
  * #i0009: Filter can enable and disable by the constant editor
  * #i0008: Backend thumbnails 
  * #53378: Table field for data
  * #53377: Filter for size and material
            Effected files:
            * ext_tables.php
            * ext_tables.sql
            * locallang_db.xml
            * tca.php
            * lib/userfunc
              * class.tx_quickshop_userfunc.php
              * locallang.xml
            * static
              * constants.txt
              * setup.txt
  * #53362: Fit it into TYPO3 6.x

3.0.8
  13-09-22
  Improvement
  # *i0007: Updating the manual
  # *i0006: caddy icon is controlled by Caddy constant
  # *i0007: caddy button is simplified
            * my_caddybutton substitutes
              * my_caddyimgsrc
              * my_caddyimgalt
              * my_caddylabel

3.0.7
  13-07-20
  Bugfix
  # *i0005: double div-tag in single view
            Effected files:
            * static/setup.txt

3.0.6
  13-06-28
  Improvements
  # *i0004: Update for Caddy 2.0.8

3.0.5
  13-06-27
  Improvement
  * #i0003: Improved caddy table structur
            Effected files:
            * static/caddy/constants.txt

3.0.4
  13-04-09
  Feature
  * #47068: Remove HTML template
            Effected files:

3.0.3
  13-04-07
  Feature
  * #47017: Ready TypoScript SEO configuration
            Effected files: