@@ -1,0 +1,201 @@
+plugin.tx_browser_pi1 {
+  views {
+    list {
+      1 {
+        tx_quickshop_products {
+          image {
+            10 {
+              10 >
+              10 < tt_content.image.20.default
+              10 {
+                imgList {
+                  field = tx_quickshop_products.image
+                }
+                imgPath   = uploads/tx_quickshop/
+                imgStart  = 0
+                imgMax    = 1
+                1 {
+                  file {
+                    width.field >
+                    width   = {$plugin.quick_shop.images.list.maxW}
+                    height  = {$plugin.quick_shop.images.list.maxH}
+                  }
+                  titleText {
+                    field = tx_quickshop_products.imageseo
+                  }
+                  imageLinkWrap {
+                    enable.field >
+                    enable = 1
+                    typolink >
+                    typolink {
+                      parameter = {$plugin.quick_shop.pages.shop} - linktosingle
+                      additionalParams {
+                        wrap  = &tx_browser_pi1[showUid]=|
+                        field = tx_quickshop_products.uid
+                      }
+                      useCacheHash  = 1
+                      returnLast    = URL
+                    }
+                  }
+                }
+                layout {
+                  key.field >
+                    // above-left
+                  key = 2
+                  2.value = <div class="csc-textpic csc-textpic-left csc-textpic-above###CLASSES###">###IMAGES######TEXT###</div>
+                }
+                cols.field  >
+                cols        = 1
+                caption >
+                stdWrap {
+                  prefixComment >
+                  wrap          = <div class="image">|</div>
+                }
+              }
+            }
+              // Handle without any image 
+            20 < .10
+            20 {
+                // If there isn't any image
+              if =
+              if {
+                isTrue  >
+                isFalse {
+                  field = tx_quickshop_products.image
+                } 
+              }
+              10 {
+                imgList = alternate_image_400x300.gif
+                imgPath = EXT:quick_shop/res/images/
+              }
+            }
+          }
+        }
+      }
+    }
+    single {
+      1 {
+        tx_quickshop_products {
+          image {
+            10 >
+            10 < tt_content.image.20.default
+            10 {
+              imgList {
+                field = tx_quickshop_products.image
+              }
+              imgPath = uploads/tx_quickshop/
+              1 {
+                file {
+                  width {
+                    field = tx_quickshop_products.imagewidth
+                  }
+                }
+                titleText {
+                  field = tx_quickshop_products.imageseo
+                }
+                imageLinkWrap {
+                  ifEmpty {
+                    typolink.parameter {
+                      field = tx_quickshop_products.image_link
+                    }
+                  }
+                  typolink.parameter {
+                    field = tx_quickshop_products.image_link
+                  }
+                  enable {
+                    field = tx_quickshop_products.image_zoom
+                  }
+                  width                       = 1000;
+                  height                      = 800m;
+                  //JSwindow = 0
+                }
+              }
+              textPos {
+                field = tx_quickshop_products.imageorient
+              }
+              equalH {
+                field = tx_quickshop_products.imageheight
+              }
+              image_compression {
+                field = tx_quickshop_products.image_compression
+              }
+              image_effects {
+                field = tx_quickshop_products.image_effects
+              }
+              noRows {
+                field = tx_quickshop_products.image_norows
+              }
+              cols {
+                field = tx_quickshop_products.imagecols
+              }
+              border {
+                field = tx_quickshop_products.imageborder
+              }
+              caption.1 {
+                field = tx_quickshop_products.caption
+              }
+              captionAlign {
+                field = tx_quickshop_products.caption_position
+              }
+              layout.key {
+                field = tx_quickshop_products.imageorient
+              }
+              stdWrap {
+                prefixComment >
+                wrap          = <div class="image">|</div>
+              }
+                // description, sku
+              text {
+                  // description, datasheet, sku
+                20 = COA
+                20 {
+                    // description
+                  10 = TEXT
+                  10 {
+                    field = tx_quickshop_products.description
+                    parseFunc < lib.parseFunc_RTE
+                  }
+                    // datasheet
+                  20 < tt_content.table.20
+                  20 {
+                    userFunc = tx_browser_cssstyledcontent->render_table
+                    userFunc {
+                        // add the value of a field to another field in cObj->data
+                      cObjDataFieldWrapper =
+                      cObjDataFieldWrapper {
+                        cols            = tx_quickshop_products.cols
+                        pi_flexform     = tx_quickshop_products.pi_flexform
+                        uid             = tx_quickshop_products.uid
+                      }
+                    }
+                    field = tx_quickshop_products.datasheet
+                    stdWrap {
+                        // With a prefix comment there won't be any output!
+                      prefixComment >
+                    }
+                  }
+                    // sku
+                  30 = COA
+                  30 {
+                      // label
+                    10 = TEXT
+                    10 {
+                      data        = LLL:EXT:quick_shop/locallang_db.xml:tx_quickshop_products.sku
+                      noTrimWrap  = ||: |
+                    }
+                      // value
+                    20 = TEXT
+                    20 {
+                      field = tx_quickshop_products.sku
+                    }
+                  }
+                  wrap = <div class="csc-textpic-text"><p>|</p></div>
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
